crates/saya-cli/src/interactive/tui/snapshots/saya_cli__interactive__tui__run_panel_snapshot_tests__a_completed_run_shows_every_step_done.snap
---
source: crates/saya-cli/src/interactive/tui/run_panel_snapshot_tests.rs
expression: buffer
---
"saya · Database read-only · Workspace /home/user/proj · Data sharing on                             "
"❯ count the orders                                                                                  "
"◆ The orders table holds 128 rows in catalog.public.orders.                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"╭ run r-snap-3 · survey the data quality ──────────────────────────────────────────────────────────╮"
"│✓ 1. profile the tables 12s                                                                       │"
"│✓ 2. compare row counts 9s                                                                        │"
"│✓ 3. write the survey note 3s                                                                     │"
"│                                                                                                  │"
"│run completed · Esc closes                                                                        │"
"│◆ The survey note is in the workspace.                                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
" [analytics] ollama/qwen approval:read-only mode:build ws:/home/user/proj host:off sharing:on  ·  ? "
"╭ saya ────────────────────────────────────────────────────────────────────────────────────────────╮"
"│Ask about your data, or type / for commands                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
