crates/saya-cli/src/interactive/tui/snapshots/saya_cli__interactive__tui__run_panel_snapshot_tests__a_failed_run_says_what_failed.snap
---
source: crates/saya-cli/src/interactive/tui/run_panel_snapshot_tests.rs
expression: buffer
---
"❯ count the orders                                                                                  "
"◆ The orders table holds 128 rows in catalog.public.orders.                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"╭ run r-snap-4 · audit the ledger ─────────────────────────────────────────────────────────────────╮"
"│✓ 1. pull the ledger 6s                                                                           │"
"│✗ 2. reconcile the totals 2s                                                                      │"
"│                                                                                                  │"
"│run failed: the provider or agent layer failed · Esc closes                                       │"
"│◆ The ledger pull stopped mid-way.                                                                │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
" [analytics] ollama/qwen approval:read-only sharing:on  ·  ? for help                               "
"╭ saya ────────────────────────────────────────────────────────────────────────────────────────────╮"
"│Ask about your data, or type / for commands                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
