crates/saya-cli/src/interactive/tui/snapshots/saya_cli__interactive__tui__run_panel_snapshot_tests__a_paused_run_names_its_reason.snap
---
source: crates/saya-cli/src/interactive/tui/run_panel_snapshot_tests.rs
expression: buffer
---
"saya · Database read-only · Workspace /home/user/proj · Data sharing on                             "
"YOU                                                                                                 "
"  count the orders                                                                                  "
"SAYA                                                                                                "
"  The orders table holds 128 rows in catalog.public.orders.                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"╭ run r-snap-2 · audit the ledger ─────────────────────────────────────────────────────────────────╮"
"│✓ 1. pull the ledger 8s                                                                           │"
"│✗ 2. reconcile the totals 4s                                                                      │"
"│                                                                                                  │"
"│run paused · a step kept failing past the bounded retries · Esc closes                            │"
"│SAYA                                                                                              │"
"│  The totals did not reconcile; the step kept failing.                                            │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"analytics · qwen                                                                          ? for help"
"╭ saya ────────────────────────────────────────────────────────────────────────────────────────────╮"
"│Ask about your data, or type / for commands                                                       │"
"╰ Enter sends ─────────────────────────────────────────────────────────────────────────────────────╯"
