crates/saya-cli/src/interactive/tui/snapshots/saya_cli__interactive__tui__run_panel_snapshot_tests__a_running_run_shows_its_steps_status_and_episode.snap
---
source: crates/saya-cli/src/interactive/tui/run_panel_snapshot_tests.rs
expression: buffer
---
"saya · Database read-only · Workspace /home/user/proj · Data sharing on                             "
"YOU                                                                                                 "
"  count the orders                                                                                  "
"SAYA                                                                                                "
"  The orders table holds 128 rows in catalog.public.orders.                                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"╭ run r-snap-1 · survey the data quality ──────────────────────────────────────────────────────────╮"
"│✓ 1. profile the tables 12s                                                                       │"
"│▶ 2. compare row counts 3s                                                                        │"
"│· 3. write the survey note                                                                        │"
"│                                                                                                  │"
"│⠋ step 2 started · 0s · Esc cancels                                                               │"
"│  ✓ bounded_sql_query: 4 rows                                                                     │"
"│                                                                                                  │"
"│SAYA                                                                                              │"
"│  Step one profiled the tables; counts look even.                                                 │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"analytics · qwen                                                                          ? for help"
"╭ saya ────────────────────────────────────────────────────────────────────────────────────────────╮"
"│Ask about your data, or type / for commands                                                       │"
"╰ Enter sends ─────────────────────────────────────────────────────────────────────────────────────╯"
